data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_715.wast
;; 6. **Loop with Type Conversion Affecting Condition**    - Test a loop where a type conversion instruction (e.g., `i32.wrap_i64`) influences the condition for `br_if`. Confirm the branch is taken only when the conversion results in zero.    - **Reason**: Validates the loop’s handling of type conversion instructions affecting the branching condition.

(assert_invalid 
  (module 
    (func $loop-with-type-conversion 
      (param i64) 
      (result i32) 
      (local i32) 
      loop 
        (local.set 0 
          (i32.wrap_i64 
            (local.get 0)
          )
        ) 
        (br_if 0 
          (i32.eqz (local.get 0))
        ) 
      end 
    )
  ) 
  "type mismatch"
)